[package]
name = "christmas-tree"
version = "0.1.0"
authors = ["Yury Antonov <1390348+yantonov@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
rand = "0.8.5"
clap = { version = "3.1.18", features = ["derive"] }
