[package]
name = "christmas-tree"
version = "0.1.0"
authors = ["Yury Antonov <1390348+yantonov@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
rand = "0.8.5"
clap = { version = "4.4.1", features = ["derive"] }
